--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "react-bootstrap": "^2.4.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.2.6",
-    "gh-pages": "^4.0.0"
-},
+    "dotenv": "^16.3.1",
+    "gh-pages": "^4.0.0",
+    "react": "17.0.2",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "17.0.2",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
