--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "public",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kaleikautakaoka.github.io/My-React-Portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
@@ -11,6 +12,7 @@
     "dotenv": "^16.3.1",
     "gh-pages": "^4.0.0",
     "react": "17.0.2",
+    "react-avatar-editor": "^13.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
